<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <ImageView
        android:id="@+id/person_info_iv_icon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:scaleType="fitCenter"
        android:src="@mipmap/ic_launcher" />

    <EditText
        android:id="@+id/person_info_et_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:textColor="@color/person_info_name"/>

    <View
        android:layout_width="120dp"
        android:layout_height="1dp"
        android:background="@color/down_line"/>
    <TextView
        android:id="@+id/person_info_tv_weibo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/bound_sina_weibo"
        android:textSize="18sp"/>
    <View
        android:layout_width="120dp"
        android:layout_height="1dp"
        android:background="@color/down_line"/>
    <TextView
        android:id="@+id/person_info_tv_qq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/bound_qq"
        android:textSize="18sp"/>

    <View
        android:layout_width="120dp"
        android:layout_height="1dp"
        android:background="@color/down_line"/>

    <Button
        android:id="@+id/person_info_btn_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/exit"
        android:textColor="@color/red"/>
</LinearLayout>