<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/slide_title_height"
    android:paddingTop="12dp"
    android:paddingBottom="5dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:background="?attr/colorPrimary">

    <LinearLayout
        android:id="@+id/header_linear_userinfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">
        <!--需要圆形图片View，还要加载图片加载框架-->
        <ImageView
            android:id="@+id/header_iv_icon"
            android:layout_width="@dimen/slide_icon_size"
            android:layout_height="@dimen/slide_icon_size"
            android:scaleType="fitCenter"/>

        <!--名字-->
        <TextView
            android:id="@+id/header_tv_name"
            android:layout_toRightOf="@id/header_iv_icon"
            android:layout_marginLeft="15dp"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/slide_icon_size"
            android:textColor="@color/white"
            android:text="@string/please_login"
            android:textSize="18sp"
            android:gravity="center_vertical" />
    </LinearLayout>

    <!--按钮-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_alignParentBottom="true">
        <!--我的收藏-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/favorites"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:textStyle="bold"
                android:text="@string/my_collect"/>
        </LinearLayout>
        <!--离线下载-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/download"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/offline_download"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>